Totally refactored fonts installation
It's much easier to add/modify/remove fonts now. :)

--- a/install
+++ b/install
@@ -84,4 +84,4 @@ install .emacs.d/elisp/Makefile
 # GUI
 fonts_Makefile_after() { make -C .fonts; }
 install .fonts.conf
-install .fonts/Makefile
+install .fonts
