Enhanced Adapt to (formerly Optimize) Environment script

--- a/install
+++ b/install
@@ -111,7 +111,7 @@ case $(uname) in Darwin)
         cd ./.dotfiles
         local n=$(shname "$o")
         run ${n}_before "$@"
-        ! [ "$o" -nt "$s" ] || continue
+        ! [ "$o" -nt "$s" ] || return 0
         echo "$o: compiling ${s##*/}"
         mkdir -p "$(dirname "$o")"
         xattr -w com.apple.TextEncoding 'UTF-8;134217984' "$s"
@@ -127,20 +127,22 @@ case $(uname) in Darwin)
             eval "${n}_before() { compilescpt '${obj//\'/\'\\\'\'}' '${src//\'/\'\\\'\'}'; }" # TODO escape obj and src
         install "$dst" "$obj" true true
     }
-    for s in Mac/Scripts/{!(Optimize\ Environment),Applications/*/*}.applescript; do
+    for s in Mac/Scripts/{!(Adapt\ to\ Environment),Applications/*/*}.applescript; do
         installscpt "$s"
     done
     Mac_Scripts_compiled_Applications_Finder_lselect_scpt_before() {
+        ! [ -e .dotfiles/Mac/Scripts/Applications/Finder/lselect.applescript ] || return 0
         curl -RLo .dotfiles/Mac/Scripts/Applications/Finder/lselect.applescript http://anoved.net/files/lselect.applescript
     }
     installscpt Mac/Scripts/Applications/Finder/lselect.applescript
     Library_Scripts_Applications_iTunes_iTunes_SED_scpt_before() {
+        ! [ -e .dotfiles/"$scptd"/Applications/iTunes/iTunes\ SED.scpt ] || return 0
         curl -RLO http://aurelio.googlecode.com/files/iTunes_SED-1.1.zip
         ditto -xk iTunes_SED-*.zip .dotfiles/"$scptd"/Applications/iTunes/
         rm -f iTunes_SED-*.zip
     }
     installscpt Mac/Scripts/Applications/iTunes/iTunes\ SED.applescript
-    for s in Mac/Scripts/{Optimize\ Environment.applescript,*.sh}; do
-        install Library/Scripts/"${s#Mac/Scripts/}" "$s" true
+    for s in Mac/Scripts/{Adapt\ to\ Environment.applescript,*.sh}; do
+        install Library/Scripts/"${s#Mac/Scripts/}" "$s" true true
     done
 ;; esac
