bpm plugins update, turning on git-helper as default

--- a/install
+++ b/install
@@ -76,7 +76,7 @@ bash_after() {
     (cd
     safeln .bash/profile .bash{rc,_profile}
     safeln .bash/logout .bash_logout
-    . .bash/plugins/bpm.sh enable bash_completion environment prompt xtermtitle try+repeat auto-tmux
+    . .bash/plugins/bpm.sh enable bash_completion environment prompt xtermtitle try+repeat auto-tmux git-helper
     )
 }
 install .bash
