--- a/install
+++ b/install
@@ -76,7 +76,17 @@ bash_after() {
     (cd
     safeln .bash/profile .bash{rc,_profile}
     safeln .bash/logout .bash_logout
-    . .bash/plugins/bpm.sh enable bash_completion environment prompt xtermtitle try+repeat auto-tmux git-helper
+    plugins=(
+        bash_completion
+        alias_completion
+        environment
+        prompt
+        xtermtitle
+        try+repeat
+        auto-tmux
+        git-helper
+    )
+    . .bash/plugins/bpm.sh enable "${plugins[@]}"
     )
 }
 install .bash
