Updated private.xml for KeyRemap4MacBook v8.0.0
- `--KeyToKey--` had to be changed to `__KeyToKey__`
- Location changed from /Library/org.pqrs/... ->
  /Application/KeyRemap4MacBook.app/Contents/...

--- a/install
+++ b/install
@@ -222,5 +222,9 @@ case $(uname) in Darwin)
     for xml in Mac/KeyRemap4MacBook/*.xml; do
         [ -e "$xml" ] || continue
         install Library/"Application Support"/"${xml#Mac/}" "$xml"
+        Library_Application_Support_KeyRemap4MacBook_private_xml_after() {
+            local x="$(mdfind KeyRemap4MacBook_cli.app | head -n 1)/Contents/MacOS/KeyRemap4MacBook_cli"
+            ! [ -x "$x" ] || "$x" reloadxml
+        }
     done
 ;; esac
