Mac KeyBindings breakthrough!
- more complete Emacs-style key bindings (WIP).
- workarounds for Korean input source for Control/Option combos.
- Universal argument (^U) key in OS X!
- plus some updates to Mac Tweaks.

--- a/install
+++ b/install
@@ -227,4 +227,9 @@ case $(uname) in Darwin)
             ! [ -x "$x" ] || "$x" reloadxml
         }
     done
+
+    # DefaultKeyBinding.dict
+    # See: http://hints.macworld.com/article.php?story=20060317045211408
+    # See: http://www.hcs.harvard.edu/~jrus/site/cocoa-text.html
+    install Library/KeyBindings/DefaultKeyBinding.dict Mac/KeyBindings/DefaultKeyBinding.dict true
 ;; esac
