Fixed window arrangement script to use NSScreen
for obtaining precise screen alignment information.

--- a/install
+++ b/install
@@ -226,7 +226,7 @@ case $(uname) in Darwin)
         [ -e "$s" ] || continue
         installscpt "$s"
     done
-    for s in Mac/Scripts/*.sh; do
+    for s in Mac/Scripts/*.{sh,py}; do
         [ -e "$s" ] || continue
         install Library/"${s#Mac/}" "$s" true true
     done
