Initial version of sleepwatcher scripts for my Mac
- Helps sharing Papers2 library over Dropbox.
- Automatically ejects and mounts back USB/external disks and remote
  TimeMachine volumes when entering sleep, or waking up from sleep.

--- a/install
+++ b/install
@@ -225,6 +225,13 @@ case $(uname) in Darwin)
         done
     fi
 
+    # install sleepwatcher scripts
+    if has sleepwatcher || mdfind-has 'kMDItemFSName == "'"$1"'"
+                                    && kMDItemContentType == public.unix-executable'; then
+        install .sleep Mac/sleepwatcher/sleep
+        install .wakeup Mac/sleepwatcher/wakeup
+    fi
+
     # install shell/python/perl scripts
     for s in Mac/Scripts/*.{sh,py,pl}; do
         [ -e "$s" ] || continue
